--- a/index.html
+++ b/index.html
@@ -30,25 +30,109 @@
     ></script>
    </head>
   <body>
-    <div class="about-section container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="about-section-content">
-            <h1 class="mb-4">Hi! 🤗 I am Iryna Kuziv</h1>
-            <h2 class="mb-4">Frontend Developer, based in Ukraine.</h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+    <body>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="/" title="Homepage">Iryna Kuziv</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+  
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html#contact-form">Contact me</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </br>
+      <h2>👋 Hi I am</h2>
+      <h1>Iryna Kuziv</h1>
+      <h3>UA Front-end developer, based in Europe</h3>
+      <div class="navigation-links">
+        <a href="about.html#contact-form" class="contact-link">Contact me</a>
+        <a href="about.html" class="about-link">About me</a>
+      </div>
+  
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Europe_polar_stereographic_Caucasus_Urals_boundary.svg/700px-Europe_polar_stereographic_Caucasus_Urals_boundary.svg.png"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-md-6">
+            <h2 class="mb-3">Europe Continent</h2>
+            <p>
+              Europe is a continent, also recognised as a part of Eurasia, located
+              entirely in the Northern Hemisphere and mostly in the Eastern
+              Hemisphere. Comprising the westernmost peninsulas of Eurasia, it
+              shares the continental landmass of Afro-Eurasia with both Asia and
+              Africa.
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <div class="mt-5">
+              <a href="https://en.wikipedia.org/wiki/Europe" class="primary-link" alt="Europe Continent"
+                >Wiki</a
+              >
+            </div>
           </div>
         </div>
-        <div class="col-lg-6">
-          <img src="img/my photo.jpg" alt="" class="img-fluid" />
+        <div class="row mt-5">
+          <div class="col-md-6">
+            <h2 class="mb-3">Weather app</h2>
+            <p>
+              Lviv is a city in western Ukraine, around 70 kilometers from the
+              border with Poland. Traces of its Polish and Austro-Hungarian
+              heritage are evident in its architecture, which blends Central and
+              Eastern European styles with those of Italy and Germany
+            </p>
+            <div class="mb-5 mt-5">
+              <a href="#" class="primary-link">Launch Weather App</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img src="images/app.png" class="img-fluid rounded" alt="Weather app"/>
+          </div>
         </div>
+      
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Europe_polar_stereographic_Caucasus_Urals_boundary.svg/700px-Europe_polar_stereographic_Caucasus_Urals_boundary.svg.png"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-md-6">
+            <h2 class="mb-3">Europe Continent</h2>
+            <p>
+              Europe is a continent, also recognised as a part of Eurasia, located
+              entirely in the Northern Hemisphere and mostly in the Eastern
+              Hemisphere. Comprising the westernmost peninsulas of Eurasia, it
+              shares the continental landmass of Afro-Eurasia with both Asia and
+              Africa.
+            </p>
+            <div class="mt-5">
+              <a href="https://en.wikipedia.org/wiki/Europe" class="primary-link"
+                >Wiki</a
+              >
+            </div>
+          </div>
       </div>
-    </div>
-  </body>
+    </body>
 </html>
