--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img src="images/app.png" class="img-fluid rounded" alt="Weather app"/>
+            <img src="imag/app.png" class="img-fluid rounded" alt="Weather app"/>
           </div>
         </div>
       
