--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script  type="text/javascript" src="https://codesandbox.io/public/sse-hooks/sse-hooks.f648b14c15c640a14a557113a991cb8d.js"></script>
-    <script  type="text/javascript" src="https://codesandbox.io/static/js/banner.be879265d.js"></script>
-
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,111 +24,67 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-   </head>
+    <script
+      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
   <body>
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="/" title="Homepage">Iryna Kuziv</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-  
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html#contact-form">Contact me</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </br>
-      <h2>👋 Hi I am</h2>
+    <div class="hero">
+      <p>👋 Hello, I am</p>
       <h1>Iryna Kuziv</h1>
-      <h3>UA Front-end developer, based in Europe</h3>
-      <div class="navigation-links">
-        <a href="about.html#contact-form" class="contact-link">Contact me</a>
-        <a href="about.html" class="about-link">About me</a>
+      <h2 class="mb-5">Front-end developer based in Ukraine ​💙💛🇺🇦​</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
       </div>
-  
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Europe_polar_stereographic_Caucasus_Urals_boundary.svg/700px-Europe_polar_stereographic_Caucasus_Urals_boundary.svg.png"
-              class="img-fluid rounded"
-            />
-          </div>
-          <div class="col-md-6">
-            <h2 class="mb-3">Europe Continent</h2>
-            <p>
-              Europe is a continent, also recognised as a part of Eurasia, located
-              entirely in the Northern Hemisphere and mostly in the Eastern
-              Hemisphere. Comprising the westernmost peninsulas of Eurasia, it
-              shares the continental landmass of Afro-Eurasia with both Asia and
-              Africa.
+    </div>
+    <p class="text-center m-5">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="img/github.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">How to use GitHub</h2>
+            <p class="mb-5 text-muted">
+              GitHub, Inc. is a provider of Internet hosting for software development and version control using Git. It offers the distributed version control and source code management functionality of Git, plus its own features. 
             </p>
-            <div class="mt-5">
-              <a href="https://en.wikipedia.org/wiki/Europe" class="primary-link" alt="Europe Continent"
-                >Wiki</a
-              >
-            </div>
+            <a href="https://en.wikipedia.org/wiki/GitHub" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
-        <div class="row mt-5">
-          <div class="col-md-6">
-            <h2 class="mb-3">Weather app</h2>
-            <p>
-              Lviv is a city in western Ukraine, around 70 kilometers from the
-              border with Poland. Traces of its Polish and Austro-Hungarian
-              heritage are evident in its architecture, which blends Central and
-              Eastern European styles with those of Italy and Germany
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Wouldn't it be great if we could create our own weather app?
             </p>
-            <div class="mb-5 mt-5">
-              <a href="#" class="primary-link">Launch Weather App</a>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <img src="img/app.png" class="img-fluid rounded" alt="Weather app"/>
+            <a href="https://dainty-basbousa-c36d1c.netlify.app/" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
-      
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Europe_polar_stereographic_Caucasus_Urals_boundary.svg/700px-Europe_polar_stereographic_Caucasus_Urals_boundary.svg.png"
-              class="img-fluid rounded"
-            />
-          </div>
-          <div class="col-md-6">
-            <h2 class="mb-3">Europe Continent</h2>
-            <p>
-              Europe is a continent, also recognised as a part of Eurasia, located
-              entirely in the Northern Hemisphere and mostly in the Eastern
-              Hemisphere. Comprising the westernmost peninsulas of Eurasia, it
-              shares the continental landmass of Afro-Eurasia with both Asia and
-              Africa.
-            </p>
-            <div class="mt-5">
-              <a href="https://en.wikipedia.org/wiki/Europe" class="primary-link"
-                >Wiki</a
-              >
-            </div>
-          </div>
+        <div class="col d-none d-lg-block">
+          <img src="img/app.png" class="img-fluid" alt="" />
+        </div>
       </div>
-    </body>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="img/netlify.jpg" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">How use to Netlify</h2>
+            <p class="mb-5 text-muted">
+              Netlify is a San Francisco–based cloud computing company that offers hosting and serverless backend services for web applications and static websites.
+            </p>
+            <a href="https://en.wikipedia.org/wiki/Netlify" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
+
