--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
+      <div>
+        <a href="about.html" class="btn btn-branding">About me</a>
+      </div>
     </div>
     <p class="text-center m-5">
       Featured Project which my best projects be choice to show
