--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
       <p>👋 Hello, I am</p>
       <h1>Iryna Kuziv</h1>
       <h2 class="mb-5">Front-end developer based in Ukraine ​💙💛🇺🇦​</h2>
-      <div>
+      <div class="navigation-links">
         <a href="#" class="btn btn-branding">Contact me</a>
-      </div>
-      <div>
         <a href="about.html" class="btn btn-branding">About me</a>
       </div>
     </div>
