--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h1>Iryna Kuziv</h1>
       <h2 class="mb-5">Front-end developer based in Ukraine ​💙💛🇺🇦​</h2>
       <div class="navigation-links">
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="contact.html" class="btn btn-branding">Contact me</a>
         <a href="about.html" class="btn btn-branding">About me</a>
       </div>
     </div>
