--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     <h3>Email</h3>
     <p> <a href="mailto:nute7021@gmail.com">nute7021@gmail.com</a></p>
     <h3>Instagram</h3>
-    <p> <a href="instagram/ira_7021"> @Iryna </a></p>
+    <p> <a href="https://www.instragram.com/ira_7021"> @Iryna </a></p>
     <h3>GitHub</h3>
     <p> <a href="https://github.com/IraAmber"> @Iryna_Git </a></p>   
       </div>
