--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">How use to Netlify</h2>
+            <h2 class="mb-5">How to use Netlify</h2>
             <p class="mb-5 text-muted">
               Netlify is a San Francisco–based cloud computing company that offers hosting and serverless backend services for web applications and static websites.
             </p>
@@ -107,6 +107,30 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:nute7021@gmail.com" class="email-link">
+            nute7021@gmail.co
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://github.com/IraAmber" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.instragram.com/ira_7021" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
