--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,30 @@
     <h3>GitHub</h3>
     <p> <a href="https://github.com/IraAmber"> @Iryna_Git </a></p>   
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:nute7021@gmail.com" class="email-link">
+            nute7021@gmail.co
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://github.com/IraAmber" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.instragram.com/ira_7021" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
