--- a/about.html
+++ b/about.html
@@ -94,6 +94,15 @@
             <i class="fab fa-instagram"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          ✌️ This website was coded by Iryna Kuziv, and is
+          <a
+            href="https://github.com/matthieua/portfolio-project"
+            target="_blank"
+          >
+            open-sourced
+          </a>
+        </p>
       </footer>
     </div>
   </body>
