--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+    <title>SheCodes Portfolio Front-end Kuziv Iryna</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -38,16 +38,16 @@
         </a>
       <ul>
         <li class="active">
-          <a href="/">Home</a>
+          <a href="/" title="home page">Home</a>
         </li>
         <li>
-          <a href="/about.html">About</a>
+          <a href="/about.html" title="aboute Frontend">About</a>
         </li>
         <li>
-          <a href="/work.html">Work</a>
+          <a href="/work.html" title="working page">Work</a>
         </li>
         <li>
-          <a href="/contact.html">Contact</a>
+          <a href="/contact.html" title="contact">Contact</a>
         </li>
       </ul>
       </nav>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="img/app.png" class="img-fluid" alt="" />
+          <img src="img/app.png" class="img-fluid" alt="Weather App" />
         </div>
       </div>
       <div class="row">
